--- a/index.html
+++ b/index.html
@@ -1,259 +1,204 @@
+**`package.json`**
+```json
+{
+  "name": "dp-design",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "engines": { "node": ">=18" },
+  "dependencies": {
+    "replicate": "^0.31.0",
+    "busboy": "^1.6.0"
+  },
+  "scripts": {
+    "dev": "vercel dev --debug"
+  }
+}
+```
+
+**`api/generate.ts`**
+```ts
+// DP Design – Backend (Vercel Serverless)
+// Accepts: multipart/form-data (field name: "image") OR JSON { prompt, imageUrl | imageBase64 }
+// Returns: { images: [url, url, url] }
+
+import type { VercelRequest, VercelResponse } from '@vercel/node'
+import Replicate from 'replicate'
+import Busboy from 'busboy'
+
+const REPLICATE_API_TOKEN = process.env.REPLICATE_API_TOKEN
+const REPLICATE_VERSION = process.env.REPLICATE_VERSION // e.g. bytedance/sdxl-lightning-4step:...
+
+function setCors(req: VercelRequest, res: VercelResponse) {
+  const origin = req.headers.origin || ''
+  // Allow same-origin by default; optionally allow a specific site when hosting elsewhere
+  const allowed = process.env.ALLOWED_ORIGIN || origin || '*'
+  res.setHeader('Access-Control-Allow-Origin', allowed)
+  res.setHeader('Access-Control-Allow-Methods', 'POST, OPTIONS')
+  res.setHeader('Access-Control-Allow-Headers', 'Content-Type, Authorization')
+}
+
+async function parseMultipart(req: VercelRequest): Promise<{ fields: Record<string,string>, file?: { buffer: Buffer, filename: string, mime: string } }>{
+  return new Promise((resolve, reject) => {
+    const bb = Busboy({ headers: req.headers as any })
+    const fields: Record<string,string> = {}
+    let chunks: Buffer[] = []
+    let meta: { filename: string, mime: string } | null = null
+
+    bb.on('file', (_name, file, info) => {
+      const { filename, mimeType } = info
+      meta = { filename, mime: mimeType }
+      file.on('data', (d: Buffer) => chunks.push(d))
+    })
+    bb.on('field', (n, v) => { fields[n] = v })
+    bb.on('error', reject)
+    bb.on('finish', () => {
+      const file = meta ? { buffer: Buffer.concat(chunks), filename: meta.filename, mime: meta.mime } : undefined
+      resolve({ fields, file })
+    })
+
+    if (typeof req.body === 'string') bb.end(Buffer.from(req.body))
+    else if (Buffer.isBuffer(req.body)) bb.end(req.body)
+    else if ((req as any).pipe) (req as any).pipe(bb)
+    else bb.end()
+  })
+}
+
+export default async function handler(req: VercelRequest, res: VercelResponse) {
+  setCors(req, res)
+  if (req.method === 'OPTIONS') return res.status(204).end()
+  if (req.method !== 'POST') return res.status(405).json({ error: 'Method Not Allowed' })
+  if (!REPLICATE_API_TOKEN) return res.status(500).json({ error: 'Missing REPLICATE_API_TOKEN' })
+  if (!REPLICATE_VERSION) return res.status(500).json({ error: 'Missing REPLICATE_VERSION' })
+
+  const replicate = new Replicate({ auth: REPLICATE_API_TOKEN })
+
+  try {
+    let prompt = ''
+    let imageUrl: string | undefined
+    let imageBase64: string | undefined
+    let fileBuffer: Buffer | undefined
+
+    const ct = (req.headers['content-type'] || '').toLowerCase()
+    if (ct.includes('multipart/form-data')) {
+      const { fields, file } = await parseMultipart(req)
+      prompt = (fields.prompt || '').toString()
+      if (fields.imageUrl) imageUrl = fields.imageUrl
+      if (fields.imageBase64) imageBase64 = fields.imageBase64
+      if (file && file.buffer?.length) fileBuffer = file.buffer
+    } else {
+      const body = typeof req.body === 'string' ? safeJSON(req.body) : (req.body || {})
+      prompt = (body?.prompt || '').toString()
+      imageUrl = body?.imageUrl
+      imageBase64 = body?.imageBase64
+    }
+
+    if (!prompt && !imageUrl && !imageBase64 && !fileBuffer) {
+      return res.status(400).json({ error: 'Provide prompt and/or an image (multipart field "image" or imageBase64/imageUrl)' })
+    }
+
+    const input: Record<string, any> = {}
+    if (prompt) input.prompt = prompt
+    if (fileBuffer) input.image = fileBuffer
+    else if (imageBase64) input.image = imageBase64
+    else if (imageUrl) input.image = imageUrl
+    input.num_outputs = 3
+
+    const prediction = await replicate.predictions.create({ version: REPLICATE_VERSION, input })
+
+    const started = Date.now()
+    while (true) {
+      const p = await replicate.predictions.get(prediction.id)
+      if (p.status === 'succeeded') {
+        const out = Array.isArray(p.output) ? p.output : (p as any)?.output?.images || []
+        return res.json({ images: out })
+      }
+      if (p.status === 'failed' || p.status === 'canceled') return res.status(502).json({ error: 'Generation failed', detail: p })
+      if (Date.now() - started > 120000) return res.status(504).json({ error: 'Timed out' })
+      await new Promise(r => setTimeout(r, 1100))
+    }
+  } catch (err: any) {
+    return res.status(500).json({ error: err?.message || 'Server error' })
+  }
+}
+
+function safeJSON(s: string){ try { return JSON.parse(s) } catch { return {} } }
+```
+
+**`index.html`** (static site)
+```html
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DP Design – AI T‑Shirt Mockup Generator</title>
-  <meta name="description" content="Upload your artwork or enter a prompt; generate up to 3 AI t‑shirt mockups." />
+  <title>DP Design – AI T‑Shirt Mockups</title>
   <style>
-    :root{
-      --bg1:#0e2a47; --bg2:#214d7c; --sun:#ffcc66; --accent:#ffd38d; --ink:#0b1622; --card:#11263f; --muted:#9fb3c8;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;
-      color:#e7f0fa; background:linear-gradient(180deg,var(--bg1),var(--bg2));
-      background-attachment:fixed; display:flex; flex-direction:column;
-    }
-    header{position:relative; padding:48px 16px 24px; text-align:center; overflow:hidden}
-    header .sun{position:absolute; width:520px; height:520px; background:radial-gradient(circle at 50% 50%,var(--sun),rgba(255,204,102,.0) 70%);
-      top:-220px; left:50%; transform:translateX(-50%); filter:blur(1px); opacity:.6}
-    header h1{position:relative; margin:0; font-size:clamp(28px,4vw,44px); letter-spacing:.3px}
-    header p{position:relative; margin:8px auto 0; max-width:820px; color:var(--muted)}
-    .animals{position:absolute; inset:auto 0 -6px 0; height:110px; pointer-events:none; opacity:.2;
-      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="110" viewBox="0 0 1200 110"><path fill="%23ffffff" fill-opacity="0.8" d="M0 80 C150 100 250 60 400 85 C550 110 650 70 800 90 C950 110 1050 80 1200 95 L1200 110 L0 110 Z"/></svg>') repeat-x center/cover}
-    .wrap{width:100%; max-width:1200px; margin:0 auto; padding:12px 16px 48px; flex:1;}
-    .card{background:rgba(17,38,63,.75); border:1px solid rgba(255,255,255,.06); box-shadow:0 12px 30px rgba(0,0,0,.35);
-      border-radius:18px; padding:18px; backdrop-filter: blur(8px)}
-    .grid{display:grid; gap:16px}
-    @media(min-width:980px){.grid{grid-template-columns:500px 1fr}}
-
-    label{display:block; font-weight:600; margin:10px 0 6px}
-    input[type="text"], select, button{
-      width:100%; padding:12px 14px; border-radius:12px; border:1px solid rgba(255,255,255,.12);
-      background:#0f2238; color:#e7f0fa; font-size:16px; outline:none;
-    }
-    input::placeholder{color:#7f99b9}
-    .row{display:grid; grid-template-columns:1fr 1fr; gap:12px}
-    .hint{color:#9fb3c8; font-size:13px; margin-top:6px}
-    button{cursor:pointer; font-weight:700; background:linear-gradient(180deg,#ffb95a,#ff9c2f); color:#1c1300; border:none}
-    button:disabled{opacity:.6; cursor:not-allowed}
-    .danger{background:#c62828;color:#fff}
-
-    .uploader{
-      background:#0a1b2d; border:1px dashed rgba(255,255,255,.25); border-radius:14px; padding:14px; text-align:center;
-      display:flex; align-items:center; justify-content:center; gap:12px; min-height:120px;
-    }
-    .uploader.drag{background:#0c2642; border-color:#ffd38d}
-    .uploader input[type=file]{display:none}
-    .thumb{display:flex; align-items:center; gap:12px; margin-top:10px}
-    .thumb img{width:72px; height:72px; object-fit:cover; border-radius:10px; border:1px solid rgba(255,255,255,.15)}
-    .thumb .name{font-size:13px; color:#cfe2ff}
-
-    .results{display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:14px; margin-top:12px}
-    .mock{position:relative; background:#061221; border-radius:14px; border:1px solid rgba(255,255,255,.08); overflow:hidden}
-    .mock img{display:block; width:100%; height:auto}
-    .mock .badge{position:absolute; top:8px; left:8px; background:rgba(0,0,0,.55); padding:4px 8px; border-radius:999px; font-size:12px}
-
-    .pug{position:relative; width:120px; height:120px; margin:16px auto 0; background:radial-gradient(circle at 50% 45%,#f7e1b5, #c8a97e 68%);
-      border-radius:18px; box-shadow:inset 0 0 10px rgba(0,0,0,.25), 0 10px 30px rgba(0,0,0,.25)}
-    .pug:before,.pug:after{content:""; position:absolute; background:#4a3728; width:26px; height:26px; border-radius:50%; top:26px}
-    .pug:before{left:26px} .pug:after{right:26px}
-    .pug .nose{position:absolute; left:50%; top:54px; width:24px; height:18px; transform:translateX(-50%); background:#3b2b21; border-radius:10px}
-
-    footer{color:#97aac2; text-align:center; padding:24px 12px; font-size:13px}
-    .small{font-size:12px;color:#91a6bf}
-    .hr{height:1px;background:linear-gradient(90deg,transparent,rgba(255,255,255,.14),transparent); margin:12px 0}
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;margin:0;background:#0f2238;color:#e7f0fa}
+    header{padding:32px 16px;text-align:center}
+    main{max-width:900px;margin:0 auto;padding:16px}
+    .card{background:#0a1b2d;border:1px solid rgba(255,255,255,.1);border-radius:14px;padding:16px}
+    .row{display:grid;gap:10px;grid-template-columns:1fr 1fr}
+    input,button{padding:12px 14px;border-radius:10px;border:1px solid rgba(255,255,255,.15);background:#0f2238;color:#e7f0fa}
+    button{cursor:pointer;font-weight:700;background:#ffb95a;color:#1c1300;border:none}
+    #out{display:grid;gap:12px;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));margin-top:14px}
+    img{width:100%;border-radius:10px}
+    .muted{color:#9fb3c8;font-size:13px}
   </style>
 </head>
 <body>
   <header>
-    <div class="sun"></div>
     <h1>DP Design — Upload & Generate T‑Shirt Mockups</h1>
-    <p>Upload an image/artwork <em>or</em> enter a prompt. The AI will generate up to three t‑shirt mockups. Paste your Vercel API URL below once your backend is live.</p>
-    <div class="animals"></div>
+    <p class="muted">Upload an image (or just enter a prompt). The backend returns up to three mockups.</p>
   </header>
-
-  <main class="wrap grid">
-    <!-- Controls -->
+  <main>
     <section class="card">
-      <div class="pug"><div class="nose"></div></div>
-      <div class="hr"></div>
-
-      <label for="apiUrl">API URL</label>
-      <input id="apiUrl" type="text" placeholder="https://YOUR-APP.vercel.app/api/generate" />
-      <div class="hint">This is your secure backend endpoint. We never put API keys in the browser.</div>
-
-      <label for="prompt">Prompt (optional if you upload artwork)</label>
-      <input id="prompt" type="text" placeholder="e.g. retro surf vibe, pastel ink, pocket print" />
-
-      <label>Upload image/artwork</label>
-      <div id="drop" class="uploader">
-        <div>
-          <strong>Drag & drop</strong> artwork here or
-          <label style="color:#ffd38d; text-decoration:underline; cursor:pointer">
-            browse<input id="file" type="file" accept="image/*">
-          </label>
-        </div>
+      <div class="row">
+        <input id="prompt" placeholder="Describe your tee… e.g. retro surf, pastel, vector" />
+        <input id="file" type="file" accept="image/*" />
       </div>
-      <div id="thumb" class="thumb" style="display:none">
-        <img id="thumbImg" alt="preview" />
-        <div>
-          <div class="name" id="thumbName"></div>
-          <div class="small" id="thumbMeta"></div>
-        </div>
+      <div class="row" style="margin-top:10px">
+        <button id="go">Generate</button>
+        <button id="clear">Clear</button>
       </div>
-
-      <div class="row" style="margin-top:12px">
-        <div>
-          <label for="size">Size</label>
-          <select id="size">
-            <option value="S">Small</option>
-            <option value="M" selected>Medium</option>
-            <option value="L">Large</option>
-            <option value="XL">XL</option>
-            <option value="2XL">2XL</option>
-          </select>
-        </div>
-        <div>
-          <label for="fit">Fit</label>
-          <select id="fit">
-            <option value="unisex" selected>Unisex</option>
-            <option value="mens">Men's</option>
-            <option value="womens">Women's</option>
-          </select>
-        </div>
-      </div>
-      <div class="hint">Size & fit are for your order flow. They don't affect the AI image yet (we can wire that later).</div>
-
-      <div class="row" style="margin-top:14px">
-        <button id="generateBtn">Generate Mockups</button>
-        <button id="clearBtn" class="danger">Clear</button>
-      </div>
-      <div class="hint" id="status"></div>
-    </section>
-
-    <!-- Output -->
-    <section class="card">
-      <h3 style="margin:6px 0 4px">Results</h3>
-      <div class="small">We’ll show up to three images below.</div>
-      <div class="results" id="results" aria-live="polite"></div>
+      <div id="status" class="muted" style="margin-top:8px"></div>
+      <div id="out"></div>
     </section>
   </main>
-
-  <footer>
-    <div class="hr"></div>
-    <div>© <span id="year"></span> DP Design. Built with ❤️ and a tiny serverless function.</div>
-  </footer>
-
   <script>
-    const $ = (sel) => document.querySelector(sel);
-    const apiUrlInput = $('#apiUrl');
-    const promptInput = $('#prompt');
-    const fileInput = $('#file');
-    const drop = $('#drop');
-    const thumb = $('#thumb');
-    const thumbImg = $('#thumbImg');
-    const thumbName = $('#thumbName');
-    const thumbMeta = $('#thumbMeta');
-    const generateBtn = $('#generateBtn');
-    const clearBtn = $('#clearBtn');
-    const results = $('#results');
-    const statusEl = $('#status');
+    const API = '/api/generate'; // same project, no CORS issues
+    const file = document.querySelector('#file');
+    const prompt = document.querySelector('#prompt');
+    const out = document.querySelector('#out');
+    const statusEl = document.querySelector('#status');
 
-    let lastFile = null; // holds the selected File
-    let lastBase64 = '';
+    document.querySelector('#go').addEventListener('click', async () => {
+      out.innerHTML = '';
+      statusEl.textContent = 'Submitting…';
+      const fd = new FormData();
+      if (file.files[0]) fd.append('image', file.files[0]);
+      if (prompt.value.trim()) fd.append('prompt', prompt.value.trim());
 
-    // Persist API URL locally so you don't have to paste it every time
-    apiUrlInput.value = localStorage.getItem('dp_api_url') || '';
-    apiUrlInput.addEventListener('change', () => localStorage.setItem('dp_api_url', apiUrlInput.value.trim()));
-
-    // --- Upload UI (drag+drop & browse) ---
-    function setThumb(file, dataUrl){
-      thumb.style.display = 'flex';
-      thumbImg.src = dataUrl;
-      thumbName.textContent = file.name;
-      const kb = Math.round(file.size / 1024);
-      thumbMeta.textContent = `${file.type || 'image'} • ${kb} KB`;
-    }
-
-    function readFileToBase64(file){
-      return new Promise((resolve, reject) => {
-        const reader = new FileReader();
-        reader.onload = () => resolve(reader.result);
-        reader.onerror = reject;
-        reader.readAsDataURL(file);
-      });
-    }
-
-    async function handleFiles(files){
-      const file = files && files[0];
-      if (!file) return;
-      if (!file.type.startsWith('image/')) { alert('Please upload an image file.'); return; }
-      lastFile = file;
-      const dataUrl = await readFileToBase64(file);
-      lastBase64 = dataUrl; // e.g. data:image/png;base64,AAA...
-      setThumb(file, dataUrl);
-    }
-
-    fileInput.addEventListener('change', (e) => handleFiles(e.target.files));
-
-    ;['dragenter','dragover'].forEach(evt => drop.addEventListener(evt, (e)=>{e.preventDefault(); drop.classList.add('drag');}));
-    ;['dragleave','drop'].forEach(evt => drop.addEventListener(evt, (e)=>{e.preventDefault(); drop.classList.remove('drag');}));
-    drop.addEventListener('drop', (e)=>{ e.preventDefault(); handleFiles(e.dataTransfer.files); });
-
-    // --- Generate ---
-    async function generate() {
-      const API_URL = apiUrlInput.value.trim();
-      if (!API_URL) { alert('Please paste your API URL first.'); apiUrlInput.focus(); return; }
-      const prompt = promptInput.value.trim();
-
-      // We send either imageBase64 (preferred if user uploaded) or nothing.
-      const payload = { prompt };
-      if (lastBase64) payload['imageBase64'] = lastBase64; // backend should accept this
-
-      results.innerHTML = '';
-      setStatus('Submitting…');
-      generateBtn.disabled = true; clearBtn.disabled = true;
       try {
-        const res = await fetch(API_URL, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(payload)
-        });
-        const data = await res.json();
-        if (!res.ok) throw new Error(data?.error || 'Request failed');
+        const r = await fetch(API, { method: 'POST', body: fd });
+        const data = await r.json();
+        if (!r.ok) throw new Error(data?.error || 'request failed');
         const images = Array.isArray(data.images) ? data.images : [];
         if (!images.length) throw new Error('No images returned. Try a simpler prompt or a faster model.');
-        results.innerHTML = images.map((u, i) => (
-          `<figure class="mock"><span class="badge">#${i+1}</span><img alt="design ${i+1}" src="${u}" /></figure>`
-        )).join('');
-        setStatus('Done!');
-      } catch (err) {
-        setStatus('Error: ' + (err?.message || err));
-        if ((err?.message||'').includes('image') && !lastBase64) {
-          setStatus('Error: This model likely needs an image. Try uploading artwork above.');
-        }
-      } finally {
-        generateBtn.disabled = false; clearBtn.disabled = false;
+        out.innerHTML = images.map(u => `<img src="${u}" alt="mockup" />`).join('');
+        statusEl.textContent = 'Done!';
+      } catch (e) {
+        statusEl.textContent = 'Error: ' + (e?.message || e);
       }
-    }
+    });
 
-    function clearAll(){
-      results.innerHTML = '';
-      promptInput.value = '';
-      lastFile = null; lastBase64='';
-      thumb.style.display = 'none'; thumbImg.removeAttribute('src'); thumbName.textContent=''; thumbMeta.textContent='';
-      setStatus('');
-    }
-    function setStatus(msg){ statusEl.textContent = msg; }
-
-    $('#generateBtn').addEventListener('click', generate);
-    $('#clearBtn').addEventListener('click', clearAll);
-
-    // year
-    $('#year').textContent = new Date().getFullYear();
+    document.querySelector('#clear').addEventListener('click', () => {
+      out.innerHTML = '';
+      statusEl.textContent = '';
+      prompt.value = '';
+      file.value = '';
+    });
   </script>
 </body>
 </html>
+```
